Code improvement based on Sonar's suggestion