@@ -4,7 +4,6 @@ import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
@@ -40,7 +39,7 @@ public class ProductController {
             List<Product> products = productService.findAll();
             List<ProductDTO> productDTOs = products.stream()
                     .map(this::convertToDTO)
-                    .collect(Collectors.toList());
+                    .toList();
             return ResponseEntity.ok(productDTOs);
         } catch (Exception e) {
             return ResponseEntity.internalServerError().build();
@@ -57,7 +56,7 @@ public class ProductController {
             List<Product> products = productService.findByCategoryId(categoryId);
             List<ProductDTO> productDTOs = products.stream()
                     .map(this::convertToDTO)
-                    .collect(Collectors.toList());
+                    .toList();
             return ResponseEntity.ok(productDTOs);
         } catch (Exception e) {
             return ResponseEntity.internalServerError().build();
@@ -93,7 +92,7 @@ public class ProductController {
             List<Product> products = productService.findByNameContaining(name);
             List<ProductDTO> productDTOs = products.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
             return ResponseEntity.ok(productDTOs);
         } catch (Exception e) {
             return ResponseEntity.internalServerError().build();
@@ -112,7 +111,7 @@ public class ProductController {
             List<Product> products = productService.findByPriceBetween(minPrice, maxPrice);
             List<ProductDTO> productDTOs = products.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
             return ResponseEntity.ok(productDTOs);
         } catch (Exception e) {
             return ResponseEntity.internalServerError().build();
